# nixfiles

./: .devshellshook.sh  .gitignore  flake.nix
.github/workflows/: asserts.yml
__tooling__/: .gitignore  assert_templates  sync_template_nixpkgs
hosts/: .gitignore  default.nix
hosts/mistylake/: .gitignore
legacy/: .gitignore  README.md  common.nix  ctl  flake.nix
legacy/host/mistylake/: .gitignore  configuration.nix  install  ssh_host_ed25519_key.pub
legacy/host/mistyriver/: .gitignore  configuration.nix  hyprland.settings.nix  install  ssh_host_ed25519_key.pub
legacy/secrets/: secrets.nix  user-password.age
legacy/users/user/: .gitignore  default.nix  secrets.nix
legacy/users/user/apps/: .gitignore
legacy/users/user/apps/btop/: default.nix
legacy/users/user/apps/firefox/: default.nix
legacy/users/user/apps/fish/: default.nix
legacy/users/user/apps/fuzzel/: default.nix
legacy/users/user/apps/hyprland/: default.nix  hyprland.conf
legacy/users/user/apps/keepassxc/: default.nix
legacy/users/user/apps/kitty/: default.nix  kitty.conf
legacy/users/user/apps/monero-gui/: default.nix
legacy/users/user/apps/moonlight-stream/: default.nix
legacy/users/user/apps/nvim/: default.nix  settings.nix
legacy/users/user/apps/remmina/: default.nix
legacy/users/user/apps/steamguard-cli/: default.nix
legacy/users/user/apps/tmux/: default.nix
legacy/users/user/apps/vesktop/: default.nix
legacy/users/user/apps/waybar/: default.nix
legacy/users/user/apps/wiremix/: default.nix
legacy/users/user/apps/yazi/: default.nix
legacy/users/user/apps/zellij/: default.nix
legacy/users/user/packs/: .gitignore
legacy/users/user/packs/fish/: config.fish  package.nix
legacy/users/user/packs/nushell/: config.nu  package.nix
legacy/users/user/scripts/: .gitignore  default.nix
legacy/users/user/scripts/nix-develop-sync/: nix-develop-sync  package.nix
legacy/users/user/scripts/nix-pkgvercmp/: nix-pkgvercmp
legacy/users/user/scripts/tmuxss/: package.nix
overlays/: .gitignore
overlays/nushell/: package.nix
packs/nushell/: .gitignore
scripts/: .gitignore  default.nix
scripts/git-cans/: git-cans  package.nix
scripts/mkignore/: mkignore  package.nix
scripts/nix-develop/: nix-develop  package.nix
scripts/nix-pkgvercmp/: package.nix
scripts/nix-sync-lock-from-nixos/: package.nix
scripts/tmuxss/: package.nix  tmuxss
templates/: .gitignore  default.nix
templates/dev-cpp/: .clangd  .devshellshook.sh  CMakeLists.txt  dbgbuild  dbgbuild-mingw  flake.nix
templates/dev-cpp/cmake/: x86_64-w64-mingw32.cmake
templates/dev-cpp/src/: main.cc  utils.cc  utils.hh
templates/devenv/: .devshellshook.sh  .gitignore  .zellij.kdl  flake.nix
templates/devenv/tooling/: devenv
